# vecvec

./: .gitignore  README.md  cabal.project  my-lorentz.cabal  shell.nix  vector-space-lorentz.cabal  vectors-lorentz.cabal
.github/workflows/: ci.yml
Data/Vector/: Fixed.hs  Lorentz.hs  Spatial.hs
Data/Vector/Fixed/: Lorentz.hs  Unboxed.hs
Data/VectorSpace/: Lorentz.hs  LowDim.hs  Spatial.hs
docs/: Comparison.lhs  README.md
test/: QC.hs
tests/: tests.hs
vecvec-classes/: vecvec-classes.cabal
vecvec-classes/Vecvec/: Classes.hs
vecvec-classes/Vecvec/Classes/: Containers.hs  Convert.hs  Deriving.hs  Geometry.hs  NDArray.hs  NDMutable.hs  Slice.hs  Tools.hs  Util.hs  Via.hs
vecvec-classes/Vecvec/Classes/Internal/: ND.hs  Types.hs
vecvec-classes/tests/: doctests.hs
vecvec-hmatrix/: vecvec-hmatrix.cabal
vecvec-hmatrix/Vecvec/: HMatrix.hs
vecvec-lapack/: LICENSE  vecvec-lapack.cabal
vecvec-lapack-ffi/: vecvec-lapack-ffi.cabal
vecvec-lapack-ffi/Vecvec/LAPACK/: FFI.hs
vecvec-lapack-ffi/cbits/: blastest.c
vecvec-lapack/Vecvec/: LAPACK.hs
vecvec-lapack/Vecvec/LAPACK/: Hermitian.hs  LinAlg.hs  Matrix.hs  Symmetric.hs  TrueSymmetric.hs  Utils.hs  Vector.hs
vecvec-lapack/Vecvec/LAPACK/Hermitian/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Internal/: Compat.hs  Hermitian.hs  Matrix.hs  Symmetric.hs  TrueSymmetric.hs  Vector.hs
vecvec-lapack/Vecvec/LAPACK/Internal/Hermitian/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Internal/Matrix/: Dense.hs  Mutable.hs  Symmetric.hs
vecvec-lapack/Vecvec/LAPACK/Internal/Matrix/Dense/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Internal/Matrix/Symmetric/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Internal/Symmetric/: Mutable.hs  Types.hs
vecvec-lapack/Vecvec/LAPACK/Internal/TrueSymmetric/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Internal/Vector/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/LinAlg/: Types.hs
vecvec-lapack/Vecvec/LAPACK/Matrix/: Decomposition.hs  Dense.hs  Mutable.hs  Symmetric.hs
vecvec-lapack/Vecvec/LAPACK/Matrix/Dense/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Matrix/Symmetric/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Symmetric/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/TrueSymmetric/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Unsafe/: Compat.hs  Hermitian.hs  Matrix.hs  Symmetric.hs  Vector.hs
vecvec-lapack/Vecvec/LAPACK/Unsafe/Hermitian/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Unsafe/Matrix/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Unsafe/Symmetric/: Mutable.hs  Types.hs
vecvec-lapack/Vecvec/LAPACK/Unsafe/Vector/: Mutable.hs
vecvec-lapack/Vecvec/LAPACK/Vector/: Mutable.hs
vecvec-lapack/tests/: Boilerplater.hs  Utilities.hs  doctests.hs  main.hs
vecvec-lapack/tests/TST/: Decomposition.hs  LinSolve.hs  MatDense.hs  MatMul.hs  Memory.hs  Model.hs  Orphanage.hs  Property.hs  Slice.hs  VectorSpace.hs
vecvec-lapack/tests/TST/Tools/: MatModel.hs  Model.hs  Orphanage.hs  Util.hs
vecvec-lapack/tests/TST/Vector/: Boilerplater.hs  Property.hs  Utilities.hs
vecvec-lorentz/: LICENSE  vecvec-lorentz.cabal
vecvec-lorentz/Data/Vector/: Lorentz.hs
vecvec-lorentz/test/: QC.hs  main.hs
vecvec-lorentz/tests/: Helpers.hs  tests.hs
vecvec-optim/: vecvec-optim.cabal
vecvec-optim/Vecvec/Optim/: LineSearch.hs
