Name:		     my-lorentz
Version:	     0.1
License:             BSD3
License-file:        LICENSE
Author:              Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.6
Synopsis:            Lorentz vectors

Library
  Build-Depends:
    base,
    fixed-vector >= 0.2,
    primitive,
    my-vectorspace
  Exposed-modules:
    Data.Vector.Lorentz
