Name:                my-lorentz
Version:             0.2
License:             BSD3
License-file:        LICENSE
Author:              Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.6
Synopsis:            Lorentz vectors

Library
  Build-Depends:
    base           >=3 && <5,
    fixed-vector   >= 0.3,
    my-vectorspace >= 0.2
  Exposed-modules:
    Data.Vector.Lorentz
