Name:                my-lorentz
Version:             0.2.1.1
License:             BSD3
License-file:        LICENSE
Author:              Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math
Build-type:          Simple
Cabal-version:       >=1.8
Synopsis:            Lorentz vectors

Library
  Build-Depends:
    base           >=3 && <5,
    fixed-vector   >= 0.4.1,
    my-vectorspace >= 0.2
  Exposed-modules:
    Data.Vector.Lorentz

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        tests.hs
  build-depends:
    base,
    my-lorentz,
    QuickCheck