Name:		vectors-lorentz
Version:	0.0.1
Cabal-Version:  >= 1.2
License:	BSD3
License-File:	LICENSE
Author:		Alexey Khudyakov
Homepage:	
Category:	Math
Synopsis:	Lorenz vectors based on vector-space package.
Build-Type:     Simple

Library
  Build-Depends:
    base,
    vectorspace-class >= 0.5
  Exposed-modules:
    Data.VectorSpace.Lorentz
    Data.VectorSpace.Spatial
