Name:		vectors-lorentz
Version:	0.0.1
Cabal-Version:  >= 1.2
License:	BSD3
License-File:	LICENSE
Author:		Alexey Khudyakov
Homepage:	
Category:	Math
Synopsis:	Lorenz vectors based on vector-space package.
Build-Type:     Simple

Library
  Build-Depends:
    base,
    fixed-vector,
    primitive,
    vectorspace-class
  Exposed-modules:
    Data.Vector.Lorentz
    Data.Vector.Spatial
