Name:           vecvec-classes
Version:        0.0.1
Synopsis:       Type classes for working with linear algebra
Description:
  This package package defines set of type classes used for working with liner algebra

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

Library
  Ghc-options:          -Wall
  Default-Language:     Haskell2010
  Build-Depends:        base             >=4.12 && <5
                      , primitive        >=0.7
                      , vector           >=0.13
                      , vector-stream    >=0.1
                      , fixed-vector     >=1.2.2.1
  Exposed-modules:
    Vecvec.Classes
    Vecvec.Classes.Containers
    Vecvec.Classes.NDArray
    Vecvec.Classes.NDMutable
    Vecvec.Classes.Tools
    Vecvec.Classes.Deriving
    Vecvec.Classes.Geometry
  Other-modules:
    Vecvec.Classes.Internal.ND
    Vecvec.Classes.Internal.Types

test-suite vecvec-classes-doctest
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  build-depends:    base           -any
                  , vecvec-classes -any
                  , doctest       >=0.22 && <0.23
