Name:           vecvec-lapack-ffi
Version:        0.0.1
Synopsis:       Low level LAPACK bindings
Description:
  Linear algebra for haskell

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md
  cbits/blastest.c

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

flag blas64
  Description: (Experimental!) Set to true when BLAS uses 64bit integers
  Default:     False
  Manual:      True
flag lapack64
  Description: (Experimental!) Set to true when LAPACK uses 64bit integers
  Default:     False
  Manual:      True
  
Library
  Ghc-options:          -Wall
  Default-Language:     GHC2021
  Default-extensions:   NoPolyKinds
                        --
                        DataKinds
                        DerivingStrategies
                        DerivingVia
                        LambdaCase
                        LexicalNegation
                        MultiWayIf
                        PatternSynonyms
                        ViewPatterns
  -- Flag-dependent configuration
  if flag(Blas64)
    cpp-options: -DVECVEC_BLAS64=1
    cc-options:  -DVECVEC_BLAS64=1
  if flag(lapack64)
    cpp-options: -DVECVEC_LAPACK64=1
    cc-options:  -DVECVEC_LAPACK64=1
  pkgconfig-depends: openblas, lapacke

  c-sources:            cbits/blastest.c
  Build-Depends:        base             >=4.12 && <5
                      , primitive        >=0.7
                      , vecvec-classes
                      , storable-complex >=0.2.2
  Exposed-modules:
    Vecvec.LAPACK.FFI
