Name:           vecvec-lapack
Version:        0.0.1
Synopsis:       Yet another set of high level BALS & LAPACK wrappers
Description:
  Linear algebra for haskell

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

Library
  Ghc-options:          -Wall
  Default-Language:     Haskell2010
  Build-Depends:        base             >=4.12 && <5
                      , vecvec-classes
                      , vecvec-lapack-ffi
                        --
                      , vector           >=0.13
                      , deepseq          >=1.4.3
                      , primitive        >=0.7
  Exposed-modules:
    Vecvec.LAPACK
    Vecvec.LAPACK.Vector.Mutable
    --
    Vecvec.LAPACK.Internal.Vector
    Vecvec.LAPACK.Internal.Vector.Mutable
    Vecvec.LAPACK.Internal.Matrix.Dense
    Vecvec.LAPACK.Internal.Matrix.Dense.Mutable
  Other-modules:
    Vecvec.LAPACK.Internal.Compat


test-suite vecvec-lapack-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded

  hs-source-dirs: tests
  main-is:        main.hs
  other-modules:  TST.Model
                  TST.Slice
  build-depends:    base             >=4.5 && <5
                  , vecvec-classes   -any
                  , vecvec-lapack    -any
                    --
                  , tasty            >= 1.2
                  , tasty-quickcheck >= 0.10
                    --
                  , linear           >=1.20
                  , vector           -any