Name:           vecvec-lapack
Version:        0.0.1
Synopsis:       Yet another set of high level BALS & LAPACK wrappers
Description:
  Linear algebra for haskell. This library provides high level
  wrappers for BLAS and LAPACK libraries.

Cabal-Version:  >= 1.10
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data
Build-Type:     Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

Library
  Ghc-options:          -Wall
  Default-Language:     Haskell2010
  Build-Depends:        base             >=4.12 && <5
                      , vecvec-classes
                      , vecvec-lapack-ffi
                        --
                      , vector           >=0.13
                      , fixed-vector     >=1.2.2.1
                      , deepseq          >=1.4.3
                      , primitive        >=0.7
  Exposed-modules:
    Vecvec.LAPACK
    Vecvec.LAPACK.Vector
    Vecvec.LAPACK.Vector.Mutable
    Vecvec.LAPACK.Matrix.Dense
    Vecvec.LAPACK.Matrix.Dense.Mutable
    Vecvec.LAPACK.LinAlg
    Vecvec.LAPACK.Utils
    --
    Vecvec.LAPACK.Internal.Vector
    Vecvec.LAPACK.Internal.Vector.Mutable
    Vecvec.LAPACK.Internal.Matrix.Dense
    Vecvec.LAPACK.Internal.Matrix.Dense.Mutable
  Other-modules:
    Vecvec.LAPACK.Internal.Compat


test-suite vecvec-lapack-tests
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -O2 -Wall -Wredundant-constraints -threaded
  hs-source-dirs:   tests
  main-is:          main.hs
  other-modules:    TST.Model
                    TST.MatMul
                    TST.Decomposition
                    TST.Slice
                    TST.LinSolve
                    TST.Orphanage
                    TST.VectorSpace
                    TST.Vector.Boilerplater
                    TST.Vector.Utilities
                    TST.Vector.Property
  default-extensions: FlexibleContexts
                      ImportQualifiedPost
                      RankNTypes
                      ScopedTypeVariables
                      TypeFamilies
  build-depends:      base             >=4.5 && <5
                    , vecvec-classes   -any
                    , vecvec-lapack    -any
                    , vecvec-lapack-ffi -any
                    --
                    , linear           >=1.20
                    , vector           -any
                    , fixed-vector     -any
                    --
                    , QuickCheck
                    , random
                    , tasty            >= 1.2
                    , tasty-quickcheck >= 0.10
                    , template-haskell
                    , transformers

test-suite vecvec-lapack-doctest
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  build-depends:    base           -any
                  , vecvec-lapack  -any
                  , vecvec-classes -any
                  , vecvec-lapack-ffi
                  , doctest       >=0.22 && <0.23
