Cabal-Version:  3.0
Build-Type:     Simple
--
Name:           vecvec-lapack
Version:        0.0.1
Synopsis:       Yet another set of high level BALS & LAPACK wrappers
Description:
  Linear algebra for haskell. This library provides high level
  wrappers for BLAS and LAPACK libraries.
--
License:        BSD-3-Clause
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Bug-reports:    https://github.com/Shimuuar/fixed-vector/issues
Category:       Data

extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

----------------------------------------------------------------
common language
  Ghc-options:          -Wall
  Default-Language:     GHC2021
  Default-extensions:   NoPolyKinds
                        --
                        DerivingStrategies
                        DataKinds
                        ViewPatterns
                        MultiWayIf
                        LambdaCase
                        DerivingVia
                        LexicalNegation
                        PatternSynonyms
                        -- Records
                        DuplicateRecordFields
                        OverloadedRecordDot

----------------------------------------------------------------


Library
  import: language
  Build-Depends:        base             >=4.12 && <5
                      , vecvec-classes
                      , vecvec-lapack-ffi
                        --
                      , vector           >=0.13
                      , fixed-vector     >=1.2.2.1
                      , deepseq          >=1.4.3
                      , primitive        >=0.7
  Exposed-modules:
    Vecvec.LAPACK.Vector
    Vecvec.LAPACK.Vector.Mutable
    Vecvec.LAPACK.Matrix
    Vecvec.LAPACK.Matrix.Mutable
    Vecvec.LAPACK.Symmetric
    Vecvec.LAPACK.Symmetric.Mutable
    Vecvec.LAPACK.Hermitian
    Vecvec.LAPACK.Hermitian.Mutable
    Vecvec.LAPACK.LinAlg
    Vecvec.LAPACK.Utils
    --
    Vecvec.LAPACK.Internal.Vector
    Vecvec.LAPACK.Internal.Vector.Mutable
    Vecvec.LAPACK.Internal.Matrix
    Vecvec.LAPACK.Internal.Matrix.Mutable
    Vecvec.LAPACK.Internal.Symmetric
    Vecvec.LAPACK.Internal.Symmetric.Mutable
    Vecvec.LAPACK.Internal.Hermitian
    Vecvec.LAPACK.Internal.Hermitian.Mutable
  Other-modules:
    Vecvec.LAPACK.Internal.Compat
    Vecvec.LAPACK.Internal.Symmetric.Types

test-suite vecvec-lapack-tests
  import: language
  type:             exitcode-stdio-1.0
  ghc-options:      -O2 -Wall -Wredundant-constraints -threaded
  hs-source-dirs:   tests
  main-is:          main.hs
  other-modules:    TST.Decomposition
                    TST.LinSolve
                    TST.MatMul
                    TST.MatDense
                    TST.Slice
                    TST.Tools.Model
                    TST.Tools.MatModel
                    TST.Tools.Orphanage
                    TST.Tools.Util
                    TST.Vector.Boilerplater
                    TST.Vector.Property
                    TST.Vector.Utilities
                    TST.VectorSpace
                    TST.Memory
  build-depends:      base             >=4.5 && <5
                    , vecvec-classes   -any
                    , vecvec-lapack    -any
                    , vecvec-lapack-ffi -any
                    --
                    , linear           >=1.20
                    , vector           -any
                    , fixed-vector     -any
                    --
                    , QuickCheck
                    , random
                    , tasty            >= 1.2
                    , tasty-quickcheck >= 0.10
                    , tasty-hunit
                    , template-haskell
                    , transformers

test-suite vecvec-lapack-doctest
  type:             exitcode-stdio-1.0
  main-is:          doctests.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  build-depends:    base           -any
                  , vecvec-lapack  -any
                  , vecvec-classes -any
                  , vecvec-lapack-ffi
                  , doctest       >=0.22 && <0.23
