Name:                vecvec-lorentz
Version:             0.1.0.0
Synopsis:            Lorentz vectors
Description:
  Implementation of Lorentz vector.

Cabal-version:       >=1.10
License:             BSD3
License-file:        LICENSE
Author:              Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math
Build-type:          Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

Library
  Ghc-options:        -Wall
  Default-Language:   Haskell2010
  Build-Depends:
    base           >= 4.12 && <5,
    deepseq,
    fixed-vector   >= 1.2,
    vecvec-classes
  Exposed-modules:
    Data.Vector.Lorentz

-- test-suite tests
--   type:           exitcode-stdio-1.0
--   hs-source-dirs: tests
--   main-is:        tests.hs
--   build-depends: base
--                , my-lorentz
--                , my-vectorspace
--                , QuickCheck
--                , tasty
--                , tasty-quickcheck
--                , fixed-vector
--                , math-functions >= 0.3
--                , random
--   Other-modules: Helpers