Name:                vecvec-lorentz
Version:             0.1.0.0
Synopsis:            Lorentz vectors
Description:
  Implementation of Lorentz vector.

Cabal-version:       >=1.10
License:             BSD3
License-file:        LICENSE
Author:              Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math
Build-type:          Simple
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

Library
  Ghc-options:        -Wall
  Default-Language:   Haskell2010
  Build-Depends:
    base           >= 4.12 && <5,
    deepseq,
    fixed-vector   >= 1.2,
    vecvec-classes
  Exposed-modules:
    Data.Vector.Lorentz

test-suite vecvec-lorentz-tests
  Ghc-options:      -Wall
  Default-Language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          main.hs
  build-depends: base -any
               , vecvec-classes
               , vecvec-lorentz
               , tasty
               , tasty-quickcheck
               , QuickCheck
               , ad                >=4
               , linear            >=1.22
  other-modules:
    QC
