Cabal-version:       3.0
Build-type:          Simple
--
Name:                vecvec-lorentz
Version:             0.1.0.0
Synopsis:            Lorentz vectors
Description:
  Implementation of Lorentz vector.
--
License:             BSD-3-Clause
License-file:        LICENSE
Author:              Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:          Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Category:            Math

extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: http://github.com/Shimuuar/vecvec

----------------------------------------------------------------
common language
  Ghc-options:          -Wall
  Default-Language:     GHC2021
  Default-extensions:   NoPolyKinds
                        --
                        DataKinds
                        DerivingStrategies
                        DerivingVia
                        LambdaCase
                        LexicalNegation
                        MultiWayIf
                        PatternSynonyms
                        ViewPatterns

----------------------------------------------------------------
  
Library
  import: language
  Build-Depends:
    base           >= 4.12 && <5,
    deepseq,
    fixed-vector   >= 1.2,
    vecvec-classes
  Exposed-modules:
    Data.Vector.Lorentz

test-suite vecvec-lorentz-tests
  import:           language
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          main.hs
  build-depends: base -any
               , vecvec-classes
               , vecvec-lorentz
               , tasty
               , tasty-quickcheck
               , QuickCheck
               , ad                >=4
               , numbers           >=3000.2
  other-modules:
    QC
